replace index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Registration Form</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
   </head>
   <body>
     <div class="reg-wrapper">
@@ -251,9 +251,9 @@
         </button>
       </div>
     </div>
-    <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/select.js"></script>
-    <script type="text/javascript" src="js/popUpsToggle.js"></script>
+    <script type="text/javascript" src="src/js/script.js"></script>
+    <script type="text/javascript" src="src/js/select.js"></script>
+    <script type="text/javascript" src="src/js/popUpsToggle.js"></script>
     </script>
   </body>
 </html>
